# receiver-firmware

./: .gitignore  .gitmodules  01-callgrind.out.2808  CMakeLists.txt  INTERNALS.md  README.md  STM32F042F6PX_FLASH.ld  STM32F072RB_FLASH.ld  STM32F072x.svd  TEST-RESULTS-2020.md  TEST-RESULTS-2021-01.md  TEST-RESULTS-2021-04.md  TEST-RESULTS-2021.md  TESTS.md  TODO.md  callgrind.out.4471  callgrind.out.5073  compile_commands.json
doc/: Detector-32-bit.s  Detector-64-bit.s  callgrind.out.40000  callgrind.out.40321  schematic.odg  trigger-algorithm.drawio
doc/ir-trigger-plots/1.7m-10cm-from-tx/: README.md
doc/ir-trigger-plots/1m/: README.md
doc/ir-trigger-plots/1m-downwards-DC-light/: README.md
doc/ir-trigger-plots/3m/: README.md
doc/ir-trigger-plots/4m/: README.md
doc/ir-trigger-plots/6m/: README.md
doc/ir-trigger-plots/6m/6m-20cm-from-rx/: README.md
misc/cubeMx/: cubeMx.ioc
src/: Adc.cc  Adc.h  AdcChannel.cc  AdcChannel.h  Button.cc  Button.h  Buzzer.cc  Buzzer.h  CanProtocol.cc  CanProtocol.h  Config.cc  Config.h  Container.cc  Container.h  Detector.cc  Detector.h  DisplayMenu.cc  DisplayMenu.h  FastStateMachine.cc  FastStateMachine.h  History.cc  History.h  IDisplay.h  IInfraRedBeam.h  InfraRedBeam.cc  InfraRedBeam.h  InfraRedBeamExti.cc  InfraRedBeamExti.h  InfraRedBeamExtiSimple.cc  InfraRedBeamModulated.cc  InfraRedBeamModulated.h  Led7SegmentDisplay.cc  Led7SegmentDisplay.h  PowerManagement.cc  PowerManagement.h  Reset_Handler.cdasm  Rtc.cc  Rtc.h  StopWatch.cc  StopWatch.h  (+12 more)
src/detector/: BlindManager.h  Detector.cc  Detector.h  ExtTriggerDetector.cc  ExtTriggerDetector.h  InfraRedBeamModulated.cc  IrTriggerDetector.cc  IrTriggerDetector.h
src/detectors/: Detector.cc
src/display/: Led7SegmentDisplay.cc  Led7SegmentDisplay.h  Led7SegmentDisplayDma.cc  Led7SegmentDisplayDma.h  Led7SegmentDisplayDma2.cc  Led7SegmentDisplayDmaOld.cc
src/platform/: Huge.h  Micro.cc  Micro.h  Regular.cc  Regular.h
src/test/: 01UsbWrite.cc  02Itoa.cc  03EdgeDetectors.cc  DetectorProfile.cc
src/usb/: UsbHelpers.cc  UsbHelpers.h  config.h  usbd_cdc.c  usbd_cdc.h  usbd_composite.c  usbd_composite.h  usbd_conf.c  usbd_conf.h  usbd_core.c  usbd_core.h  usbd_ctlreq.c  usbd_ctlreq.h  usbd_def.h  usbd_desc.c  usbd_ioreq.c  usbd_ioreq.h  usbhelper.h
